tests/fails/choose_typecheck.mat
matrix A[1,2]
scalar B
B = choose(A,A,A,A)